projects/ship-ui/ship-sidenav/ship-sidenav.scss
@use 'helpers' as *;

$shipSidenav: true !default;

@if $shipSidenav == true {
  html.sh-sidenav-open,
  body.sh-sidenav-open {
    overflow: hidden;
  }

  sh-sidenav {
    --sidenav-width: #{p2r(280)};
    --sidenav-wrap-w: 100vw;
    --sidenav-wrap-h: 100vh;

    display: flex;
    width: var(--sidenav-wrap-w);
    height: var(--sidenav-wrap-h);

    .sidenav {
      width: var(--sidenav-width);
      transition: width 200ms linear;
      height: 100%;
      overflow-x: hidden;
      overflow-y: auto;
      -webkit-overflow-scrolling: auto;
      overscroll-behavior: contain;
    }

    .main-wrap {
      position: relative;
      z-index: 1;
      flex: 1 0;
      display: block;
      height: 100%;
      overflow: auto;
      padding: p2r(16 16 16 0);
      background-color: var(--base-1);
    }

    main {
      overflow-x: hidden;
      overflow-y: auto;
      -webkit-overflow-scrolling: auto;
      border: var(--border-10);
      border-radius: var(--shape-3);
      height: calc(100vh - 2rem);
      box-shadow: var(--box-shadow-35);
    }

    .closed-topbar {
      display: none;
      min-height: p2r(60);
      background-color: var(--base-1);
      align-items: center;
      justify-content: space-between;
      padding: p2r(0 16);
      border-bottom: var(--border-10);
      z-index: 10000;
      position: relative;
    }

    .dragable {
      display: none;
    }

    .drag-image {
      display: none;
    }

    &.simple {
      border-radius: 0;

      .main-wrap {
        padding: 0;

        main {
          height: 100vh;
          border-radius: 0;
          border-width: 0 0 0 1px;
        }
      }

      &.closed {
        --sidenav-width: #{p2r(100)};
      }
    }

    &.overlay {
      overflow: hidden;

      .drag-image {
        display: block;
        width: p2r(4);
        height: 40%;
        background-color: var(--base-2);
        border-radius: p2r(2);
        box-shadow: none;
        position: fixed;
        top: 0;
        left: -9999px;
      }

      .sidenav {
        position: fixed;
        z-index: 0;
      }

      .dragable {
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        z-index: 9999;
        width: 50px;
        padding-right: 30px;
        display: flex;
        align-items: center;
        justify-content: center;
        cursor: grab;

        &:active {
          cursor: grabbing;
        }

        &:after {
          content: '';
          display: block;
          width: p2r(4);
          height: 40%;
          background-color: var(--base-2);
          border-radius: p2r(2);
        }

        &:hover {
          &:after {
            background-color: var(--base-4);
          }
        }
      }

      .dropping-surface {
        position: fixed;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
        z-index: 100000;
      }

      .main-wrap {
        z-index: 1;
        padding: 0;
        display: flex;
        height: 100vh;
        position: relative;
        flex-direction: column;
        transform: translateX(0);
        transition: transform 200ms linear;
        overflow: hidden;
      }

      &.is-dragging {
        user-select: none;
        cursor: grabbing;

        .main-wrap {
          transition: none;
        }

        > * {
          cursor: grabbing;
        }

        .dragable {
          cursor: grabbing;
        }
      }

      &.open {
        .main-wrap {
          transform: translateX(var(--sidenav-width));
          box-shadow: var(--box-shadow-10);
          border-left: var(--border-10);
        }

        main {
          overflow-y: hidden;
        }
      }

      .closed-topbar {
        display: flex;

        &:empty {
          display: none;
        }
      }

      main {
        border: 0;
        box-shadow: none;
        flex: 1;
        height: auto;
        min-height: 0;
        border-radius: 0;
      }
    }
  }
}

